@@ -1,6 +1,7 @@
 *** Changelog ***
 = 1.2.5 - 2018-09-27 =
 * Fix - Resolved performance issue.
+* Add - Wallet REST API with WooCommerce endpoint.
 * Dev - Removed WOO_WALLET_ICON constant.
 
 = 1.2.4 - 2018-09-24 =
